methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: ')' expected but integer literal found.
    for (i<- to 4){
                ^PatternPicture:8: error: illegal start of simple expression
  }
  ^